--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Avalon Floral</title>
+    <title>Avalon Floral - Home</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -43,7 +43,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#"><span id="green">A</span>valon Floral</a>
+                <a class="navbar-brand" href="index.html"><span id="green">A</span>valon Floral</a>
 
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -58,26 +58,26 @@
    </button>
    <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
       <li role="presentation">
-         <a role="menuitem" tabindex="-1" href="#">Hand-Crafted Arrangements</a>
+         <a role="menuitem" tabindex="-1" href="arrangements.html">Hand-Crafted Arrangements</a>
       </li>
       <li role="presentation">
          <a role="menuitem" tabindex="-1" href="#">Build Your Own</a>
       </li>
       <li role="presentation">
-         <a role="menuitem" tabindex="-1" href="#">
+         <a role="menuitem" tabindex="-1" href="subscription.html">
             Subscription
          </a>
       </li>
    </ul>
     </div></li>
                     <li>
-                        <a href="#">About</a>
+                        <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="#">Services</a>
+                        <a href="services.html">Services</a>
                     </li>
-                    <li>
-                        <a href="#">Contact</a>
+                   <li>
+                       <a target="_blank" id="fbook" href="https://www.facebook.com/pages/Avalon-Floral/108029693932"> <img id ="fbook"src = "images/facebook.jpg"</img></a>
                     </li>
                 </ul>
                     
@@ -224,7 +224,9 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
+                    <p>504 Water Street | Eau Claire, WI 54703 | (715) 838.8880 |  <a href="mailto:webmaster@example.com">avalonfloralso@gmail.com</a></p>
                     <p>Copyright &copy; Avalon Floral 2014</p>
+                    
                 </div>
             </div>
         </footer>
